[package]
name = "multitrack"
version = "0.1.0"
authors = ["GitHub <noreply@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
lewton = "0.10.1"
wasm-bindgen-futures = "0.4.19"
js-sys = "0.3.46"
ogg = "0.7"

[dependencies.web-sys]
version = "0.3"
features = ["Document", "Window", "File", "Blob", "FileReader", "ReadableStream", "console"]


[profile.release]
opt-level = "s"